--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="tab_materias_favoritas">Minhas Favoritas</string>
     <string name="full_description_todo"> Este espaço está reservado para uma descrição mais detalhada da activity. A implementação virá na versão 2.0 deste aplicativo =). A ideia aqui, por enquanto, é ser aprovado na cadeira de Android, abrangendo todos os requisitos solicitados por @nglauber." </string>
     <string name="btn_remove_favorite">Desfavoritar</string>
+    <string name="unfavorited">Removido dos favoritos</string>
+    <string name="favorited">Acrescentado aos favoritos</string>
 </resources>
